# VideoAIMetaFlow

./: .env.example  .gitignore  README.md  docker-compose.yml  preview-clean.html  preview-cyberpunk.html
backend/: Dockerfile  alembic.ini  pyproject.toml  run.py  start.ps1
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_analysis_duration.py
backend/app/: config.py  main.py
backend/app/api/: analysis.py  export.py  router.py  search.py  tags.py  videos.py
backend/app/db/: database.py  models.py
backend/app/prompts/: combined.py  critique.py  summary.py  tagging.py  timeline.py
backend/app/schemas/: analysis.py  search.py  tag.py  video.py
backend/app/services/: analysis_service.py  embedding_service.py  export_service.py  gemini_service.py  search_service.py  video_service.py
backend/app/workers/: pipeline.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  start.ps1
frontend/src/: App.vue
frontend/src/api/: search.ts  videos.ts
frontend/src/assets/: main.css
frontend/src/components/common/: BaseBadge.vue  BaseButton.vue  BaseCard.vue  EmptyState.vue  ExportButton.vue  StatusBadge.vue
frontend/src/components/layout/: AppHeader.vue
frontend/src/components/upload/: DropZone.vue  UploadQueue.vue
frontend/src/components/video/: VideoCard.vue
frontend/src/router/: index.ts
frontend/src/stores/: search.ts  video.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue  SearchView.vue  UploadView.vue  VideoDetailView.vue
